# libMatrixImproved

./: CMakeLists.txt  README.md
inc/: matrix.h
src/: main.cpp  matrix.cpp
test/: main_test.cpp
